test/cgip/PP/error/inheritance/rep/reperr-21.javaerr20

Type error in test case.
rep-21.arg, l. 44, c. 12:
  Error : f is multiple defined in super classes
rep-21.arg, l. 44, c. 12:
  Error : Unknown identifier f
